# tidycode

./: .gitattributes  .gitignore  CHANGELOG.md  DESKTOP_FEATURES_ANALYSIS.md  DIFF_ENHANCEMENT_PLAN.md  INTEGRATION_COMPLETE.md  LARGE_FILE_SUPPORT_PROPOSAL.md  LICENSES.md  PDF_TROUBLESHOOTING.md  PRINTJS_ANALYSIS.md  README.md  SYNCFUSION_ANALYSIS.md  WASM_DESKTOP_FIX.md  WASM_IMPLEMENTATION.md  WASM_INTEGRATION_SUMMARY.md  WASM_PRODUCTION_FIX.md  WINDOWS_BUILD_GUIDE.md  build-all-windows.ps1  build-desktop.ps1  generate-ico.js  generate-icons.js  generate-large-json.js  generate-test-file.js  generate-test-json.js  generate-test-log.js  generate-test-xml.js  index.html  package.json  render.yaml  test-large-file-generator.html  test-wasm-simple.html  test-wasm.html  test.csv  vite.config.js
.claude/: settings.local.json
docs/: AD_INTEGRATION_ANALYSIS.md  AI_INTEGRATION_ARCHITECTURE.md  CODE_SIGNING.md  CODE_SIGNING_QUICKSTART.md  FORMAT_SUPPORT_ANALYSIS.md  FORMAT_SUPPORT_IMPLEMENTATION_PLAN.md  LARGE_FILE_SUPPORT.md  SIGNING.md
pdf-print-plugin-lab/: index.html  package.json
pdf-print-plugin-lab/src/: App.tsx  styles.css
pdf-print-plugin-lab/src-tauri/: Cargo.toml  tauri.conf.json
public/: _redirects  download-alpha.html  download.html  manifest.json  privacy.html  private-alpha.html  robots.txt  sitemap.xml
public/docs/: features.html  index.html  release-notes.html  tips-and-tricks.html
scripts/: README.md  build-portable.ps1  build-signed.ps1  build-wasm.js  clean-build-windows.ps1  clean-build.sh  download-lsp-binaries.sh  generate-test-files.js  prepare-lsp.js  setup-gpg.ps1  setup-gpg.sh  sign-installer.ps1  sign-release.ps1  sign-release.sh  sign-with-gpg.ps1  upload-to-r2-v2.ps1  upload-to-r2.ps1  upload-to-r2.sh
src/: TidyCode.jsx  index.css  main.jsx  testTinyLLM.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  print.rs
src-wasm/: Cargo.toml  README.md  build.sh
src-wasm/pkg/: .gitignore  file_ops_wasm.d.ts  file_ops_wasm.js  file_ops_wasm_bg.wasm  file_ops_wasm_bg.wasm.d.ts  package.json
src-wasm/src/: file_buffer.rs  lib.rs
src/components/: AIActionsMenu.jsx  AIChatPanel.jsx  AIProviderSelector.jsx  AIResultsPanel.jsx  AISelectionToolbar.jsx  AISettingsModal.jsx  AdBanner.jsx  CodeMirrorEditor.jsx  CodeSuggestionPanel.jsx  CookieConsent.jsx  DiffViewer.jsx  DiffViewerModal.jsx  FileSystemBrowser.jsx  NativePrintDialog.jsx  OllamaSetupWizard.jsx  Tooltip.jsx  (+9 more)
tauri-plugin-native-pdf-print/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
tauri-plugin-native-pdf-print/permissions/: default.toml
tauri-plugin-native-pdf-print/permissions/autogenerated/: reference.md
tauri-plugin-native-pdf-print/permissions/autogenerated/commands/: get_default_printer.toml  get_printer_media.toml  get_printers.toml  print_pdf.toml  print_pdf_bytes.toml
tauri-plugin-native-pdf-print/permissions/schemas/: schema.json
tauri-plugin-native-pdf-print/src/: commands.rs  error.rs  lib.rs  linux.rs  windows.rs
test/: smoke.sh
(+61 files in other folders)
