[package]
name = "file-ops-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Tidy Code Team"]
description = "WebAssembly file operations for Tidy Code"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for Tauri

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
regex = "1.10"
serde_json = "1.0"           # JSON parsing
quick-xml = "0.31"           # XML parsing
csv = "1.3"                  # CSV parsing

# Console logging for debugging
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3                # Maximum optimization
lto = true                   # Link-time optimization
codegen-units = 1            # Single codegen unit for smaller size

[profile.dev]
opt-level = 1                # Some optimization in dev for reasonable performance
